syntax = "proto3";

option java_multiple_files = true;
option java_package = "billing";

service BillingService {
  rpc CreateBillingAccount (BillingRequest) returns (BillingResponse);
}

// This could be thought of as a DTO for proto
// The numbers for patientId, name and email etc are to be serialized and de-serialized,
// that's why these nums have to be unique and 1, 2, 3 works.
message BillingRequest {
  string patientId = 1;
  string name = 2;
  string email = 3;
}

message BillingResponse {
  string accountId = 1;
  string status = 2;
}
